# ngubeklagu

./: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: analysis.py
backend/app/services/: audio_analyzer.py  cache.py  fingerprint.py  ml_classifier.py
backend/app/services/analyzers/: production.py  scoring.py  spectral.py  temporal.py  weights.py
backend/data/: cache.db
backend/tests/: conftest.py  test_api.py  test_cache.py  test_fingerprint.py  test_ml_classifier.py  test_scoring.py  test_weights.py
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisResults.tsx  AudioInfo.tsx  AudioWaveformPlayer.tsx  BatchUploader.tsx  DepthSelector.tsx  DomainCard.tsx  FileUploader.tsx  ModelFingerprintCard.tsx  ScanHistoryModal.tsx  ScoreGauge.tsx
frontend/src/services/: api.ts  historyStore.ts
frontend/src/utils/: pdfReport.ts
